--- a/Sparc2/Sparc2/Ideas/IdeasPage.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeasPage.razor.css
@@ -5,14 +5,15 @@
   row-gap: 60px;
   width: fit-content;
   height: fit-content;
-  padding: 120px 60px;
+  padding: 240px;
 }
 article .card-container {
+  width: 500px;
   height: 700px;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: start;
 }
-article .card-container:nth-of-type(2n+1) {
+article .card-container:nth-of-type(odd) {
   align-items: end;
 }
