--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -20,3 +20,6 @@
 
 @inject NavigationManager Nav
 @inject BlossomApi Api
+@inject IJSRuntime Js
+@inject IdeaService IdeaService
+@inject Sparc2.Databases.AzureBlob.AzureBlob AzureBlob
