--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -30,6 +30,9 @@ nav button {
   cursor: pointer;
   transition: 0.2s all ease-in-out;
 }
+nav button ::deep svg path {
+  stroke: #FFFCF6;
+}
 
 .other-nav {
   position: fixed;
