--- a/Sparc2/Sparc2/Html.razor.scss
+++ b/Sparc2/Sparc2/Html.razor.scss
@@ -4,6 +4,7 @@ html, body {
     font-size: 62.5%;
     font-family: 'neue-haas-grotesk-display', Helvetica, sans-serif;
     margin: 0;
+    position: relative;
 
     ::-webkit-scrollbar {
         display: none;
