--- a/Sparc2/Sparc2/Ideas/IdeaCardFull.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaCardFull.razor.css
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001;
+  z-index: 1000;
   width: 501px;
   height: fit-content;
   max-height: 732px;
@@ -15,66 +15,122 @@
 .modal header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 12px;
   margin-bottom: 16px;
 }
-.modal header img {
+.modal header .left {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+}
+.modal header .left button {
+  padding: 10px;
+}
+.modal header .left button ::deep svg {
+  width: 14px;
+  height: 14px;
+  margin-top: 2px;
+}
+.modal header .left button ::deep svg path {
+  stroke: var(--purple-800);
+}
+.modal header .left button:hover {
+  border-color: var(--purple-500);
+}
+.modal header .left button:hover ::deep svg path {
+  stroke: var(--purple-500);
+}
+.modal header .left button:active {
+  border-color: var(--purple-800);
+}
+.modal header .left button:active ::deep svg path {
+  stroke: var(--purple-800);
+}
+.modal header .left img {
   width: 32px;
   height: 32px;
 }
-.modal header div {
+.modal header .left div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 0;
 }
-.modal header div h3 {
+.modal header .left div h3 {
   color: var(--purple-800);
   font-size: 1.6rem;
-  font-weight: 450;
+  font-weight: 600;
   line-height: 120%;
   letter-spacing: -0.16px;
 }
-.modal header div p {
+.modal header .left div p {
   color: var(--purple-800);
   font-size: 1.4rem;
-  font-weight: 450;
+  font-weight: 400;
   line-height: 120%;
   letter-spacing: -0.14px;
 }
-.modal section {
+.modal header .right button {
+  padding: 10px;
+}
+.modal header .right button ::deep svg {
+  width: 14px;
+  height: 14px;
+  margin-top: 2px;
+}
+.modal header .right button ::deep svg path {
+  stroke: none;
+  fill: var(--purple-800);
+}
+.modal header .right button:hover {
+  border-color: var(--purple-500);
+}
+.modal header .right button:hover ::deep svg path {
+  stroke: none;
+  fill: var(--purple-500);
+}
+.modal header .right button:active {
+  border-color: var(--purple-800);
+}
+.modal header .right button:active ::deep svg path {
+  stroke: none;
+  fill: var(--purple-800);
+}
+.modal section.content {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.modal section h2 {
+.modal section.content h2 {
   color: var(--gray-900);
   font-size: 2.133rem;
   font-weight: 600;
   line-height: 110%;
   letter-spacing: -0.427px;
 }
-.modal section .files {
+.modal section.content .files {
   position: relative;
 }
-.modal section .files .images {
+.modal section.content .files .images {
   display: flex;
   flex-direction: row;
   overflow-x: hidden;
   width: 100%;
   height: fit-content;
 }
-.modal section .files .images img {
+.modal section.content .files .images img {
   display: none;
   width: 100%;
 }
-.modal section .files .images img.active {
+.modal section.content .files .images img.active {
   display: block;
 }
-.modal section .files:hover .arrows {
+.modal section.content .files:hover .arrows {
   width: 100%;
   height: 100%;
   display: flex;
@@ -87,7 +143,7 @@
   transform: translate(-50%, -50%);
   animation: fadeIn 0.3s ease-in-out;
 }
-.modal section .files:hover .arrows button {
+.modal section.content .files:hover .arrows button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,49 +151,86 @@
   background: rgba(218, 190, 250, 0.5);
   cursor: pointer;
 }
-.modal section .files:hover .arrows button ::deep svg {
+.modal section.content .files:hover .arrows button ::deep svg {
   width: 20px;
 }
-.modal section .files:hover .arrows button ::deep svg path {
+.modal section.content .files:hover .arrows button ::deep svg path {
   stroke: var(--purple-50);
 }
-.modal section .files:hover .arrows button.arrow-left {
+.modal section.content .files:hover .arrows button.arrow-left {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
-.modal section .files:hover .arrows button.arrow-right {
+.modal section.content .files:hover .arrows button.arrow-right {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-.modal section .files:hover .arrows button.arrow-right ::deep svg {
+.modal section.content .files:hover .arrows button.arrow-right ::deep svg {
   transform: rotate(180deg);
 }
-.modal section div:last-of-type p {
+.modal section.content div:last-of-type p {
   color: var(--gray-900);
   font-size: 1.4rem;
   font-weight: 450;
   line-height: 120%;
 }
-.modal section .arrows {
+.modal section.content .arrows {
   display: none;
 }
-.modal section .indicators {
+.modal section.content .indicators {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 4px;
   width: 100%;
-  margin-top: 2px;
+  margin-top: 4px;
 }
-.modal section .indicators .indicator {
+.modal section.content .indicators .indicator {
   background: var(--purple-200);
   width: 5px;
   height: 5px;
   border-radius: 50%;
 }
-.modal section .indicators .indicator.active {
+.modal section.content .indicators .indicator.active {
   background: var(--purple-800);
+}
+.modal section.comments hr {
+  width: 100%;
+  margin: 24px 0;
+  color: var(--gray-100);
+}
+.modal section.comments h4 {
+  color: var(--gray-900);
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 14.4px */
+  letter-spacing: -0.12px;
+}
+.modal section.comments div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+  margin-top: 8px;
+  padding: 8px;
+  padding-left: 12px;
+  border: 1px solid var(--gray-600);
+  border-radius: 16px;
+}
+.modal section.comments div input {
+  width: 100%;
+  padding: 4px;
+  background: none;
+  border: none;
+}
+.modal section.comments div button {
+  padding: 10px 16px;
+  background: var(--white);
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 .modal footer {
   display: flex;
