--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -43,6 +43,7 @@ html, body {
   font-size: 62.5%;
   font-family: "neue-haas-grotesk-display", Helvetica, sans-serif;
   margin: 0;
+  position: relative;
 }
 html ::-webkit-scrollbar, body ::-webkit-scrollbar {
   display: none;
