--- a/Sparc2/Sparc2/Ideas/IdeasPage.razor
+++ b/Sparc2/Sparc2/Ideas/IdeasPage.razor
@@ -24,8 +24,8 @@
     IEnumerable<Idea> ProjectIdeas = new List<Idea>();
 
     protected override async Task OnInitializedAsync()
-    {        
-        IdeaService.OnIdeasChanged += UpdateIdeasHandler;
+    {     
+        IdeaService.OnIdeaPosted += UpdateIdeas;
         ProjectIdeas = await Api.ProjectIdeas.GetAllIdeas();        
     }
 
@@ -34,21 +34,11 @@
         await Js.InvokeVoidAsync("findCenter");
     }
 
-    private async void UpdateIdeasHandler()
-    {
-        await UpdateIdeas();        
-    }
-
     private async Task UpdateIdeas()
     {
         ProjectIdeas = await Api.ProjectIdeas.GetAllIdeas();
         StateHasChanged();
-    }
-
-    public void Dispose()
-    {
-        IdeaService.OnIdeasChanged -= UpdateIdeasHandler;
-    }     
+    }       
 
     void OpenFullIdea(Idea idea)
     {
@@ -60,5 +50,10 @@
     {
         ShowFullIdeaCard = false;
         CurrentIdea = null;
+    }
+
+    public void Dispose()
+    {
+        IdeaService.OnIdeaPosted -= UpdateIdeas;
     }
 }
