--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -1,4 +1,4 @@
-﻿<div class="card" @onclick=OpenFullView @onclick:stopPropagation=true>
+﻿<div class="card" id="idea-@Idea.Id" @onclick=OpenFullView @onclick:stopPropagation=true>
     <header>
         <img src="images/user-stock.png" />
         <div>
