--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
                 <input type="text" placeholder="Search" class="input-text" />
             </div>
             <div class="right">
-                <button class="add-btn" @onclick="() => OpenAddCard(0)"><LightbulbIcon /> <span>Share Idea</span></button>
-                <button class="add-btn" @onclick="() => OpenAddCard(1)"><DollarIcon />  <span>Donate</span></button>
+                <button class="tertiary-btn" @onclick="() => OpenAddCard(0)"><LightbulbIcon /> <span>Share Idea</span></button>
+                <button class="tertiary-btn donate-btn" @onclick="() => OpenAddCard(1)"><DollarIcon />  <span>Donate</span></button>
             </div>
         }
     </div>
