--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -48,13 +48,16 @@ html, body {
 html ::-webkit-scrollbar, body ::-webkit-scrollbar {
   display: none;
 }
+html.modal-open, body.modal-open {
+  overflow: hidden;
+}
 
 h1, h2, h3, h4, h5, h6, h7 {
   margin: 0;
   padding: 0;
 }
 
-p {
+p, ul, li {
   margin: 0;
   padding: 0;
 }
