--- a/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
@@ -10,7 +10,7 @@
   padding: 24px;
   border-radius: 16px;
   background: var(--yellow-50);
-  cursor: pointer;
+  animation: fadeIn 1s ease-in-out;
 }
 .modal header {
   display: flex;
@@ -101,6 +101,50 @@
   stroke: none;
   fill: var(--purple-800);
 }
+.modal .container {
+  max-height: 677px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.modal footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 24px;
+  /*
+  button {
+      display: flex;
+      height: 40px;
+      padding: 10px 20px 10px 16px;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      background: none;
+      border-radius: 20px;
+      border: 1px solid var(--gray-100);
+      color: var(--gray-600);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 120%;
+      letter-spacing: -0.16px;
+      cursor: pointer;
+      transition: .2s all ease-in-out;
+
+      &:hover {
+          border: 1px solid var(--purple-800);
+      }
+
+      &:active {
+          border: 1px solid var(--gray-100);
+      }
+  }*/
+}
+.modal footer div:first-of-type {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+}
 .modal section.content {
   display: flex;
   flex-direction: column;
@@ -113,24 +157,24 @@
   line-height: 110%;
   letter-spacing: -0.427px;
 }
-.modal section.content .files {
+.modal section.content .file-previews {
   position: relative;
 }
-.modal section.content .files .images {
+.modal section.content .file-previews .images {
   display: flex;
   flex-direction: row;
   overflow-x: hidden;
   width: 100%;
   height: fit-content;
 }
-.modal section.content .files .images img {
+.modal section.content .file-previews .images img {
   display: none;
   width: 100%;
 }
-.modal section.content .files .images img.active {
+.modal section.content .file-previews .images img.active {
   display: block;
 }
-.modal section.content .files:hover .arrows {
+.modal section.content .file-previews:hover .arrows {
   width: 100%;
   height: 100%;
   display: flex;
@@ -143,7 +187,7 @@
   transform: translate(-50%, -50%);
   animation: fadeIn 0.3s ease-in-out;
 }
-.modal section.content .files:hover .arrows button {
+.modal section.content .file-previews:hover .arrows button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,21 +195,21 @@
   background: rgba(218, 190, 250, 0.5);
   cursor: pointer;
 }
-.modal section.content .files:hover .arrows button ::deep svg {
+.modal section.content .file-previews:hover .arrows button ::deep svg {
   width: 20px;
 }
-.modal section.content .files:hover .arrows button ::deep svg path {
+.modal section.content .file-previews:hover .arrows button ::deep svg path {
   stroke: var(--purple-50);
 }
-.modal section.content .files:hover .arrows button.arrow-left {
+.modal section.content .file-previews:hover .arrows button.arrow-left {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
-.modal section.content .files:hover .arrows button.arrow-right {
+.modal section.content .file-previews:hover .arrows button.arrow-right {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-.modal section.content .files:hover .arrows button.arrow-right ::deep svg {
+.modal section.content .file-previews:hover .arrows button.arrow-right ::deep svg {
   transform: rotate(180deg);
 }
 .modal section.content div:last-of-type p {
@@ -232,44 +276,92 @@
   font-size: 1.2rem;
   font-weight: 600;
 }
-.modal footer {
+.modal .files-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 24px;
-  /*
-  button {
-      display: flex;
-      height: 40px;
-      padding: 10px 20px 10px 16px;
-      justify-content: center;
-      align-items: center;
-      gap: 4px;
-      background: none;
-      border-radius: 20px;
-      border: 1px solid var(--gray-100);
-      color: var(--gray-600);
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 120%;
-      letter-spacing: -0.16px;
-      cursor: pointer;
-      transition: .2s all ease-in-out;
-
-      &:hover {
-          border: 1px solid var(--purple-800);
-      }
-
-      &:active {
-          border: 1px solid var(--gray-100);
-      }
-  }*/
+  align-items: center;
 }
-.modal footer div:first-of-type {
+.modal .files-header .left {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   gap: 4px;
+}
+.modal .files-header .left h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.modal section.files h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.modal section.files ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: calc(100% - 25px);
+}
+.modal section.files ul li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--gray-100);
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+.modal section.files ul li:hover {
+  border: 1px solid var(--purple-500);
+  color: var(--purple-500);
+}
+.modal section.files ul li:active {
+  border: 1px solid var(--purple-900);
+  color: var(--purple-900);
+}
+.modal section.files ul li .left {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+}
+.modal section.files ul li .left .img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  border: 1px solid var(--gray-100);
+  border-radius: 10px;
+}
+.modal section.files ul li .left .img-container ::deep svg {
+  width: 24px;
+  height: 24px;
+}
+.modal section.files ul li .left .file-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+.modal section.files ul li .left .file-info h4 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.modal section.files ul li .left .file-info p {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+.modal section.files ul li button {
+  background: none;
+}
+.modal section.files footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: end !important;
 }
 
 @keyframes fadeIn {
