--- a/Sparc2/Sparc2/Ideas/IdeaModal.razor.scss
+++ b/Sparc2/Sparc2/Ideas/IdeaModal.razor.scss
@@ -10,7 +10,7 @@
     padding: 24px;
     border-radius: 16px;
     background: var(--yellow-50);
-    cursor: pointer;
+    animation: fadeIn 1s ease-in-out;
 
     header {
         display: flex;
@@ -131,6 +131,53 @@
         }
     }
 
+    .container {
+        max-height: 677px;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 24px;
+
+        div:first-of-type {
+            display: flex;
+            flex-direction: row;
+            gap: 4px;
+        }
+        /*
+        button {
+            display: flex;
+            height: 40px;
+            padding: 10px 20px 10px 16px;
+            justify-content: center;
+            align-items: center;
+            gap: 4px;
+            background: none;
+            border-radius: 20px;
+            border: 1px solid var(--gray-100);
+            color: var(--gray-600);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 120%;
+            letter-spacing: -0.16px;
+            cursor: pointer;
+            transition: .2s all ease-in-out;
+
+            &:hover {
+                border: 1px solid var(--purple-800);
+            }
+
+            &:active {
+                border: 1px solid var(--gray-100);
+            }
+        }*/
+    }
+
     section.content {
         display: flex;
         flex-direction: column;
@@ -144,7 +191,7 @@
             letter-spacing: -0.427px;
         }
 
-        .files {
+        .file-previews {
             position: relative;
 
             .images {
@@ -291,45 +338,109 @@
         }
     }
 
-    footer {
+    .files-header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin-top: 24px;
+        align-items: center;
 
-        div:first-of-type {
+        .left {
             display: flex;
             flex-direction: row;
-            gap: 4px;
-        }
-        /*
-        button {
-            display: flex;
-            height: 40px;
-            padding: 10px 20px 10px 16px;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             gap: 4px;
-            background: none;
-            border-radius: 20px;
-            border: 1px solid var(--gray-100);
-            color: var(--gray-600);
-            font-size: 16px;
-            font-style: normal;
+
+            h3 {
+                font-size: 1.4rem;
+                font-weight: 600;
+            }
+        }
+    }
+
+    section.files {
+        h4 {
+            font-size: 1.2rem;
             font-weight: 600;
-            line-height: 120%;
-            letter-spacing: -0.16px;
-            cursor: pointer;
-            transition: .2s all ease-in-out;
+        }
 
-            &:hover {
-                border: 1px solid var(--purple-800);
-            }
+        ul {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            width: calc(100% - 25px);
 
-            &:active {
+            li {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                gap: 12px;
+                width: 100%;
+                padding: 12px;
                 border: 1px solid var(--gray-100);
+                border-radius: 8px;
+                cursor: pointer;
+                font-size: 1.2rem;
+
+                &:hover {
+                    border: 1px solid var(--purple-500);
+                    color: var(--purple-500);
+                }
+
+                &:active {
+                    border: 1px solid var(--purple-900);
+                    color: var(--purple-900);
+                }
+
+                .left {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 16px;
+
+                    .img-container {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 4px;
+                        border: 1px solid var(--gray-100);
+                        border-radius: 10px;
+
+                        ::deep svg {
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
+
+                    .file-info {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: start;
+
+                        h4 {
+                            font-size: 1.4rem;
+                            font-weight: 600;
+                        }
+
+                        p {
+                            font-size: 1.2rem;
+                            font-weight: 400;
+                        }
+                    }
+                }
+
+                button {
+                    background: none;
+                }
             }
-        }*/
+        }
+
+        footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: end !important;
+        }
     }
 }
 
