--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.css
@@ -81,3 +81,22 @@
   display: flex;
   justify-content: space-between;
 }
+
+.edit-mode {
+  width: 501px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1001;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
