--- a/Sparc2/Sparc2/Shared/MainLayout.razor.css
+++ b/Sparc2/Sparc2/Shared/MainLayout.razor.css
@@ -1,10 +1,1 @@
-﻿body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: var(--purple-50);
-}
-
-main {
-  margin: auto 0;
-}
+﻿
