--- a/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
@@ -12,6 +12,17 @@
   background: var(--yellow-50);
   animation: fadeIn 1s ease-in-out;
 }
+@media only screen and (max-width: 600px) {
+  .modal {
+    width: calc(100% - 64px) !important;
+    max-height: 75% !important;
+    padding: 16px !important;
+  }
+  .modal .container {
+    max-height: 60vh !important;
+    padding-bottom: 1px;
+  }
+}
 .modal header {
   display: flex;
   flex-direction: row;
