--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -1,29 +1,33 @@
 ﻿section {
+    width: 100vw;
     height: calc(100vh + 1px);
     overflow: hidden;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    container-type: inline-size;
+    container-name: home-container;
 
     .hero {
+        width: calc(100% - 200px);
+        margin: 0 100px;
         display: flex;
-        align-items: center;
         justify-content: center;
-        margin: 9rem 6.3rem 0 6.3rem;
-
-        div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+        align-items: center;
 
         #hero-text {
-            padding: 20px;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            width: 50%;
+            max-width: 750px;
             animation: fadeIn 3s ease-in-out;
 
             h1 {
-                max-width: 750px;
                 margin: 0;
                 color: var(--purple-800);
-                font-size: 89px;
+                font-size: 8.9rem;
                 letter-spacing: -1.795px;
 
                 button {
@@ -42,11 +46,16 @@
         }
 
         #mosaic-container {
+            display: flex;
+            justify-content: end;
+            align-items: center;
             width: 50%;
             animation: fadeInScaleUp 2s ease-in-out;
+            cursor: pointer;
 
             img {
                 width: 100%;
+                margin-right: -35px;
             }
         }
     }
@@ -84,6 +93,48 @@
         }
     }
 }
+
+@container home-container (max-width: 1403px) {
+    .hero {
+        #hero-text {
+            h1 {
+                font-size: 6.4rem !important
+            }
+        }
+    }
+}
+
+@container home-container (max-width: 1048px) {
+    .hero {
+        #hero-text {
+            width: 40% !important;
+
+            h1 {
+                font-size: 5.2rem !important;
+            }
+        }
+
+        #mosaic-container {
+            width: 60% !important;
+        }
+    }
+}
+
+@container home-container (max-width: 874px) {
+    .hero {
+        #hero-text {
+            h1 {
+                font-size: 4.8rem !important;
+            }
+        }
+    }
+}
+
+/*@container home-container (max-width: 819px) {
+    .hero {
+        flex-direction: column !important;
+    }
+}*/
 
 ::-webkit-scrollbar {
     display: none;
