--- a/Sparc2/Sparc2/Shared/PageLayout.razor.css
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor.css
@@ -1,14 +1,4 @@
-﻿body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: var(--purple-50);
-  position: relative;
-  width: fit-content;
-  height: fit-content;
-}
-
-main {
+﻿main {
   position: relative;
   margin: auto 0;
   z-index: 50;
