fix idea modal size

--- a/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
+++ b/Sparc2/Sparc2/Ideas/IdeaModal.razor.css
@@ -12,14 +12,15 @@
   background: var(--yellow-50);
   animation: fadeIn 1s ease-in-out;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 580px) {
   .modal {
     width: calc(100% - 64px) !important;
-    max-height: 75% !important;
+    height: fit-content;
+    max-height: 80% !important;
     padding: 16px !important;
   }
   .modal .container {
-    max-height: 60vh !important;
+    max-height: 70vh !important;
     padding-bottom: 1px;
   }
 }
